--- a/client/src/assets/css/style.scss
+++ b/client/src/assets/css/style.scss
@@ -5,12 +5,13 @@
 
 body {
   background-color: #303030;
-  
+  padding: 10px;
+
   .welcome-page {
     display: flex;
     justify-content: center;
-    
-    .main-logo{
+    margin-bottom: 30px;
+    .main-logo {
       position: absolute;
       width: 500px;
     }
@@ -27,11 +28,118 @@ body {
       }
 
 
-      .type-logo{
+      .type-logo {
         display: flex;
         align-items: center;
         justify-content: center;
-     }
+      }
+    }
+  }
+
+  .arena-page {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+
+    .card-arena {
+      width: 1256px;
+      height: 500px;
+      border-radius: 30px;
+      padding: 30px;
+
+      h3 {
+        text-align: center;
+      }
+
+      #myProgress1 {
+        width: 100%;
+        background-color: #ddd;
+      }
+
+      #myBar1 {
+        width: 90%;
+        height: 30px;
+        background-color: #4CAF50;
+      }
+
+      #myProgress2 {
+        width: 100%;
+        background-color: #df0000;
+      }
+
+      #myBar2 {
+        width: 70%;
+        height: 30px;
+        background-color: #ddd;
+      }
+    }
+
+    .card-type {
+      text-align: center;
+      letter-spacing: 5px;
+      min-width: 30%;
+    }
+  }
+
+
+  .winner-page {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+    .card-winner {
+      width: 490px;
+      height: 530px;
+      border-radius: 40px;
+
+      p{
+        margin-top: 30px;
+        font-size: 50px;
+      }
+
+      .btn-section {
+        margin-top: 100px;
+
+        .btn {
+          width: 100px;
+        }
+
+        .btn-danger{
+          margin-left: 10px;
+        }
+      }
+    }
+  }
+
+  .loser-page {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+    .card-loser {
+      width: 490px;
+      height: 530px;
+      border-radius: 40px;
+
+      p {
+        margin-top: 30px;
+        font-size: 50px;
+      }
+
+      .btn-section {
+        margin-top: 100px;
+
+        .btn {
+          width: 100px;
+        }
+
+        .btn-danger {
+          margin-left: 10px;
+        }
+      }
     }
   }
 }
