--- a/client/src/assets/css/style.scss
+++ b/client/src/assets/css/style.scss
@@ -47,6 +47,9 @@ body {
       height: 500px;
       border-radius: 30px;
       padding: 30px;
+      background-image: url(../arena.jpg);
+      background-size: cover;
+      background-position-y: bottom;
 
       h3 {
         text-align: center;
