--- a/client/src/assets/css/style.scss
+++ b/client/src/assets/css/style.scss
@@ -4,13 +4,18 @@
 }
 
 body {
-  background-color: #303030;
+  background-color: #747474;
   padding: 10px;
+   
 
   .welcome-page {
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
+    background-image: url(../welcome-bg.jpg);
+    background-size: cover;
+   
+
     .main-logo {
       position: absolute;
       width: 500px;
@@ -18,9 +23,10 @@ body {
 
     .card {
       margin-top: 200px;
-      margin-bottom: 0;
+      margin-bottom: 80px;
       width: 400px;
       height: 400px;
+      border: 10px solid #111111;
       border-radius: 30px;
 
       input {
@@ -40,6 +46,8 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    background-image: url(../background_test.png);
+    padding: 50px;
 
 
     .card-arena {
@@ -87,10 +95,13 @@ body {
 
 
   .winner-page {
-    margin-top: 50px;
     display: flex;
+    padding: 50px;
     justify-content: center;
     text-align: center;
+    background-image: url(../result-bg.jpg);
+    background-size: cover;
+    background-position: left;
 
     .card-winner {
       width: 490px;
@@ -145,4 +156,17 @@ body {
       }
     }
   }
+
+  .rooms-page{
+    padding: 70px;
+    background-image: url(../rooms-bg.png);
+    background-size: cover;;
+    min-height: 100vh;
+
+    .title{
+      color: #372d13;
+    }
+  }
+
+
 }
