--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -5,14 +5,16 @@
 
 body {
   background-color: #747474;
-  padding: 10px;
+  /* padding: 10px; */
+  height: 100vh
 }
 body .welcome-page {
   display: flex;
   justify-content: center;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   background-image: url(../welcome-bg.jpg);
   background-size: cover;
+  height: 100vh;
 }
 body .welcome-page .main-logo {
   position: absolute;
@@ -20,7 +22,7 @@ body .welcome-page .main-logo {
 }
 body .welcome-page .card {
   margin-top: 200px;
-  margin-bottom: 80px;
+  /* margin-bottom: 80px; */
   width: 400px;
   height: 400px;
   border: 10px solid #111111;
